Tue Aug 14 07:29:27 CEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a channel key regeneration bug.  It registered new
	  timeout tasks exponentially until all system resources were
	  used.  Affected file silcd/server.c.

Sun Aug 12 20:48:14 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added the SILC Document generator to the scripts/silcdoc.
	  It can be used to generate the Toolkit Reference Manual out
	  of the source tree.  Internally it will also use the RoboDoc
	  generator now imported in util/robodoc.

Sun Aug 12 12:28:17 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added couple of return's in rekey protocol if error orccurred
	  during the protocol.  The execution must be terminated.
	  Affected file silcd/protocol.c.  Also, terminate the protocol
	  always with timeout.

Sat Aug 11 12:36:02 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* The client's Client ID was created initally from the wrong
	  nickname (it could have been in format nick@host) in the
	  silc_server_new_client.  Affected file silcd/packet_receive.c

Sat Aug 11 00:29:57 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added some SILC_LOG_ERROR's to various error conditions
	  if client could not be added to ID cache.  Affected files
	  silcd/packet_receive.c and silcd/server.c.

	* When client's sock->user_data is freed, NULL also the 
	  client->router and client->connection pointers.  Added check
	  for these pointers being NULL to various places around the
	  code.  Affected file silcd/server.c.

	* Added client->data.registered == TRUE checks to various
	  places around the code to assure that unregistered client's
	  are not handled when it is not allowed.  Affected file
	  silcd/server.c.

	* Added `bool registered' fields to all 
	  silc_idlist_[server|client]_get_* routines to indicate whether
	  the fetched client needs to be registered or not.  Affected
	  file silcd/idlist.[ch].

	* Add your own entry as registered to the ID cache in the