@@ -83,6 +83,7 @@ enum {
   SILCTXT_PUBKEY_NO_MATCH,
   SILCTXT_PUBKEY_MAYBE_EXPIRED,
   SILCTXT_PUBKEY_MITM_ATTACK,
+  SILCTXT_GETKEY_NOKEY,
 
   SILCTXT_FILL_4,
 
