@@ -678,16 +678,21 @@ silc_command_reply(SilcClient client, SilcClientConnection conn,
       id_type = va_arg(vp, uint32);
       entry = va_arg(vp, void *);
       public_key = va_arg(vp, SilcPublicKey);
-      
-      pk = silc_pkcs_public_key_encode(public_key, &pk_len);
-      
-      silc_verify_public_key_internal(client, conn, 
-				      (id_type == SILC_ID_CLIENT ?
-				       SILC_SOCKET_TYPE_CLIENT :
-				       SILC_SOCKET_TYPE_SERVER),
-				      pk, pk_len, SILC_SKE_PK_TYPE_SILC,
-				      NULL, NULL);
-      silc_free(pk);
+
+      if (public_key) {
+	pk = silc_pkcs_public_key_encode(public_key, &pk_len);
+	
+	silc_verify_public_key_internal(client, conn, 
+					(id_type == SILC_ID_CLIENT ?
+					 SILC_SOCKET_TYPE_CLIENT :
+					 SILC_SOCKET_TYPE_SERVER),
+					pk, pk_len, SILC_SKE_PK_TYPE_SILC,
+					NULL, NULL);
+	silc_free(pk);
+      } else {
+	printformat_module("fe-common/silc", server, NULL,
+			   MSGLEVEL_CRAP, SILCTXT_GETKEY_NOKEY);
+      }
     }
     break;
     
